--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
             %li
               %a{:href => "#"}= t("web-app-theme.profile", :default => "Profile")
             %li
-              %a{:href => "#"}= t("web-app-theme.settings", :default => "Settings")
+              = link_to t("web-app-theme.Blog-Entry", :default => "Blogs"),blog_entries_path
             %li
               = link_to t("web-app-theme.logout", :default => "Logout"), destroy_user_session_path, :method => :delete
         #main-navigation
