--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,15 +1,29 @@
+
+<script type="text/javascript" >
+jQuery(document).ready(function() {
+//alert("document ready");
+jQuery('#user_new').validate({
+ debug: true,
+  rules: {
+	"user[email]": {required: true, email: true},
+        "user[password]": {required: true, minlength: 6},
+        "user[password_confirmation]": {required: true, equalTo: "#user_password"}
+       }
+  });
+});
+</script>
 <h2>Sign up</h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+<%= form_for(resource,:id=>"user_new", :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
+  <div><%= f.label :email %>  *<br />
   <%= f.email_field :email %></div>
 
-  <div><%= f.label :password %><br />
+  <div><%= f.label :password %>  *<br />
   <%= f.password_field :password %></div>
 
-  <div><%= f.label :password_confirmation %><br />
+  <div><%= f.label :password_confirmation %>  *<br />
   <%= f.password_field :password_confirmation %></div>
 
   <div><%= f.submit "Sign up" %></div>
